--- a/res/values-be/values.xml
+++ b/res/values-be/values.xml
@@ -3,4 +3,79 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-be/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"У праграмы <xliff:g id="APP_NAME">%1$s</xliff:g> узніклі праблемы са службамі Google Play. Паўтарыце спробу."</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-be/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"Падключэнне да <xliff:g id="NAME">%1$s</xliff:g> выканана"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"Падключэнне да <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_default_channel_name" msgid="2568179715202151240">"Cast"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"Адключыць"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-be/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"Рэклама"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"Трансляцыя на %1$s"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"Схаваныя цітры"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"Схаваныя цітры недаступныя"</string>
+<string name="cast_connecting_to_device" msgid="6769392312239056170">"Падключэнне да прылады <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"Адключыць"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"Відарыс, які адлюстроўваецца ў той час, калі на прыёмніку Cast прайграецца рэклама"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"Паказваецца рэклама…"</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"Вокладка альбома"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"Жывая трансляцыя"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"Загрузка…"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"Прапусціць"</string>
+<string name="cast_forward" msgid="7884080323096468593">"Наперад"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"Дзесяць секунд наперад"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"Трыццаць секунд наперад"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"Адключыць гук"</string>
+<string name="cast_pause" msgid="5308503786390460607">"Паўза"</string>
+<string name="cast_play" msgid="5906987965619702702">"Прайграць"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"Перамотка назад"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"Перамотка на дзесяць секунд назад"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"Перамотка на трыццаць секунд назад"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"Элемент прайгравання"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"Пераход да наступнага элемента"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"Пераход да папярэдняга элемента"</string>
+<string name="cast_stop" msgid="9191388946729723891">"Спыніць"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"Спыніць перадачу плынню ў рэальным часе"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"Аўдыя"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"Скасаваць"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"Схаваныя цітры"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"Трэк <xliff:g id="POSITION">%1$d</xliff:g>"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"Няма"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"ОК"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"Субцітры"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"Уключыць гук"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-be/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"Уключыць"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"<xliff:g id="APP_NAME">%1$s</xliff:g> не будзе працаваць, пакуль вы не ўключыце службы Google Play."</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"Уключыць службы Google Play"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"Усталяваць"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"<xliff:g id="APP_NAME">%1$s</xliff:g> не будзе працаваць без службаў Google Play, якія адсутнічаюць на вашай прыладзе."</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"Атрымаць службы Google Play"</string>
+<string name="common_google_play_services_notification_channel_name" msgid="4293541511340436975">"Даступнасць сэрвісаў Google Play"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"Памылка службаў Google Play"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"<xliff:g id="APP_NAME">%1$s</xliff:g> не будзе працаваць без службаў Google Play, якія не падтрымліваюцца вашай прыладай."</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"Абнавіць"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"<xliff:g id="APP_NAME">%1$s</xliff:g> не будзе працаваць, пакуль вы не абновіце службы Google Play."</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"Абнаўленне службаў Google Play"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"<xliff:g id="APP_NAME">%1$s</xliff:g> не будзе працаваць без службаў Google Play, якія ў цяперашні час абнаўляюцца."</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"Патрабуецца новая версія служб Google Play. Яна абновіцца аўтаматычна ў бліжэйшы час."</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"Адкрыць на тэлефоне"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"Увайсцi"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"Увайсці праз Google"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-be/strings.xml -->
+<eat-comment/>
+<string name="s1" msgid="368094699078615544">"Захаваць відарыс"</string>
+<string name="s2" msgid="4550830452390689489">"Дазволіць рэкламе захоўваць відарыс у Галерэі відарысаў?"</string>
+<string name="s3" msgid="2435407834265420668">"Прыняць"</string>
+<string name="s4" msgid="9167523597401839819">"Адхіліць"</string>
+<string name="s5" msgid="1566682516266724847">"Стварыць падзею календара"</string>
+<string name="s6" msgid="5996672174517137271">"Дазволіць рэкламе стварыць падзею календара?"</string>
+<string name="s7" msgid="7163549807207034258">"Тэставая рэклама"</string>
 </resources>
