--- a/res/values-es/values.xml
+++ b/res/values-es/values.xml
@@ -3,4 +3,79 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-es/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"La aplicación <xliff:g id="APP_NAME">%1$s</xliff:g> tiene problemas con los Servicios de Google Play. Vuelve a intentarlo."</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-es/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"Conectado a <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"Conectando a <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_default_channel_name" msgid="2568179715202151240">"Enviar"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"Desconectar"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-es/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"Anuncio"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"Enviando a %1$s"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"Subtítulos"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"Subtítulos no disponibles"</string>
+<string name="cast_connecting_to_device" msgid="6769392312239056170">"Conectando a <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"Desconectar"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"Imagen que se muestra mientras el receptor de Google Cast reproduce un anuncio"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"Anuncio en curso…"</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"Portada del álbum"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"Streaming en directo"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"Cargando…"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"Saltar"</string>
+<string name="cast_forward" msgid="7884080323096468593">"Avanzar"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"Avanzar 10 segundos"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"Avanzar 30 segundos"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"Silenciar"</string>
+<string name="cast_pause" msgid="5308503786390460607">"Pausar"</string>
+<string name="cast_play" msgid="5906987965619702702">"Reproducir"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"Rebobinar"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"Rebobinar 10 segundos"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"Rebobinar 30 segundos"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"Control para buscar posición de reproducción"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"Saltar al siguiente elemento"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"Saltar al elemento anterior"</string>
+<string name="cast_stop" msgid="9191388946729723891">"Detener"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"Detener streaming en directo"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"Audio"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"Cancelar"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"Subtítulos"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"Pista <xliff:g id="POSITION">%1$d</xliff:g>"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"Ninguna"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"Aceptar"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"Subtítulos"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"Activar sonido"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-es/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"Habilitar"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"<xliff:g id="APP_NAME">%1$s</xliff:g> no funcionará hasta que no habilites Servicios de Google Play."</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"Habilita Servicios de Google Play"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"Instalar"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"<xliff:g id="APP_NAME">%1$s</xliff:g> no se ejecutará si los Servicios de Google Play no están instalados en tu dispositivo."</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"Descargar Servicios de Google Play"</string>
+<string name="common_google_play_services_notification_channel_name" msgid="4293541511340436975">"Disponibilidad Servicios de Google Play"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"Error de Servicios de Google Play"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"No es posible ejecutar la aplicación <xliff:g id="APP_NAME">%1$s</xliff:g> sin los Servicios de Google Play, que no son compatibles con tu dispositivo."</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"Actualizar"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"<xliff:g id="APP_NAME">%1$s</xliff:g> no funcionará hasta que no actualices Servicios de Google Play."</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"Actualiza Servicios de Google Play"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"<xliff:g id="APP_NAME">%1$s</xliff:g> no se ejecutará hasta que finalice la actualización en curso de Servicios de Google Play."</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"Se necesita una nueva versión de Servicios de Google Play. Se actualizará en breve."</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"Abrir en teléfono"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"Iniciar sesión"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"Iniciar sesión con Google"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-es/strings.xml -->
+<eat-comment/>
+<string name="s1" msgid="368094699078615544">"Guardar imagen"</string>
+<string name="s2" msgid="4550830452390689489">"¿Permitir que el anuncio almacene imágenes en la galería de imágenes?"</string>
+<string name="s3" msgid="2435407834265420668">"Aceptar"</string>
+<string name="s4" msgid="9167523597401839819">"Rechazar"</string>
+<string name="s5" msgid="1566682516266724847">"Crear evento de calendario"</string>
+<string name="s6" msgid="5996672174517137271">"¿Permitir que el anuncio cree un evento de calendario?"</string>
+<string name="s7" msgid="7163549807207034258">"Anuncio de prueba"</string>
 </resources>
