--- a/res/values-km/values.xml
+++ b/res/values-km/values.xml
@@ -3,4 +3,79 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-km/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"<xliff:g id="APP_NAME">%1$s</xliff:g> កំពុងមានបញ្ហាជាមួយសេវាកម្មរបស់ Google Play ។ សូមព្យាយាមម្តងទៀតនៅពេលក្រោយ។"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-km/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"ភ្ជាប់​ទៅ​​ <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"កំពុងភ្ជាប់ទៅ <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_default_channel_name" msgid="2568179715202151240">"ភ្ជាប់"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"ផ្ដាច់"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-km/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"ពាណិជ្ជកម្ម"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"កំពុងខាសទៅ %s"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"បាន​បិទ​ចំណងជើង"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"មិនមានចំណងជើងភា្ជប់ទេ"</string>
+<string name="cast_connecting_to_device" msgid="6769392312239056170">"កំពុងភ្ជាប់ជាមួយ <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"ផ្ដាច់"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"រូបភាពបង្ហាញខណៈពេលកម្មវិធីទទួលការខាសនេះចាក់ការផ្សាយពាណិជ្ជកម្ម"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"ពាណិជ្ជកម្មស្ថិតក្នុងដំណើរការ…"</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"ស្នាដៃសិល្បៈអាល់ប៊ុម"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"ស្ទ្រីមបន្តផ្ទាល់"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"កំពុងដំណើរការ..."</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"រំលង"</string>
+<string name="cast_forward" msgid="7884080323096468593">"ខាទៅមុខ"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"ខាទៅមុខដប់វិនាទី"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"ខាទៅមុខសាមសិបវិនាទី"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"បិទសំឡេង"</string>
+<string name="cast_pause" msgid="5308503786390460607">"ផ្អាក"</string>
+<string name="cast_play" msgid="5906987965619702702">"ចាក់"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"ខាថយក្រោយ"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"ខាថយក្រោយដប់វិនាទី"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"ខាថយក្រោយសាមសិបវិនាទី"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"អង្គគ្រប់គ្រងការរកមើលការចាក់"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"រំលងទៅធាតុបន្ទាប់"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"រំលងទៅធាតុពីមុន"</string>
+<string name="cast_stop" msgid="9191388946729723891">"បញ្ឈប់"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"បញ្ឈប់ការស្ទ្រីមបន្តផ្ទាល់"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"សំឡេង"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"បោះបង់"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"ចំណងជើងពិពណ៌នាបិទ"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"បទទី <xliff:g id="POSITION">%1$d</xliff:g>"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"គ្មាន"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"យល់ព្រម"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"ចំណងជើងរង"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"បើកសំឡេង"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-km/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"បើក"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"<xliff:g id="APP_NAME">%1$s</xliff:g> នឹងមិនដំណើរការទេ លុះត្រាតែអ្នកបើកសេវាកម្ម Google Play។"</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"បើកសេវាកម្ម Google Play"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"ដំឡើង"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"<xliff:g id="APP_NAME">%1$s</xliff:g> នឹងមិនដំណើរការទេ ប្រសិនបើមិនមានសេវាកម្មនានារបស់ Google Play ដែលបានបាត់ពីឧបករណ៍របស់អ្នក។"</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"ទាញយកសេវាកម្ម Google Play"</string>
+<string name="common_google_play_services_notification_channel_name" msgid="4293541511340436975">"លទ្ធភាព​ប្រើប្រាស់សេវាកម្ម Google Play"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"កំហុស​​សេវាកម្ម​ Google កម្សាន្ត"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"<xliff:g id="APP_NAME">%1$s</xliff:g> នឹងមិនដំណើរការដោយគ្មានសេវាកម្មរបស់ Google Play ដែលឧបករណ៍របស់អ្នកមិនគាំទ្រនោះទេ។"</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"អាប់ដេត"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"<xliff:g id="APP_NAME">%1$s</xliff:g> នឹងមិនដំណើរការទេ លុះត្រាតែអ្នកធ្វើបច្ចុប្បន្នភាពសេវាកម្ម Google Play។"</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"អាប់ដេតសេវាកម្ម Google Play"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"<xliff:g id="APP_NAME">%1$s</xliff:g> នឹងមិនដំណើរការទេ បើមិនមានសេវាកម្ម Google Play ដោយសារតែវាកំពុងអាប់ដេត។"</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"តម្រូវឲ្យមានកំណែថ្មីនៃសេវាកម្ម Google Play។ វានឹងអាប់ដេតដោយខ្លួនវានៅពេលបន្តិចទៀតនេះ។"</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"បើកតាមទូរស័ព្ទ"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"ចូល"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"ចូលដោយប្រើ Google"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-km/strings.xml -->
+<eat-comment/>
+<string name="s1" msgid="368094699078615544">"រក្សាទុក​រូបភាព"</string>
+<string name="s2" msgid="4550830452390689489">"អនុញ្ញាត​ឲ្យ​ពាណិជ្ជកម្ម​ផ្ទុក​រូបភាព​នៅក្នុង​វិចិត្រសាល​រូបភាព​ដែរទេ?"</string>
+<string name="s3" msgid="2435407834265420668">"យល់ព្រម"</string>
+<string name="s4" msgid="9167523597401839819">"បដិសេធ"</string>
+<string name="s5" msgid="1566682516266724847">"បង្កើត​ព្រឹត្តិការណ៍​ក្នុង​ប្រតិទិន"</string>
+<string name="s6" msgid="5996672174517137271">"អនុញ្ញាត​ឲ្យ​ពាណិជ្ជកម្ម​បង្កើត​ព្រឹត្តិការណ៍​ក្នុង​ប្រតិទិន​ដែរទេ?"</string>
+<string name="s7" msgid="7163549807207034258">"ពាណិជ្ជកម្ម​សាកល្បង"</string>
 </resources>
