--- a/res/values-sq/values.xml
+++ b/res/values-sq/values.xml
@@ -3,4 +3,79 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-sq/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"<xliff:g id="APP_NAME">%1$s</xliff:g> ka probleme me shërbimet e Google Play. Provo sërish."</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-sq/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"U lidh me <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"Po lidhet me <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_default_channel_name" msgid="2568179715202151240">"Cast"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"Shkëpute"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-sq/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"Reklamë"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"Duke transmetuar te %1$s"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"Titrat"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"Titrat të padisponueshëm"</string>
+<string name="cast_connecting_to_device" msgid="6769392312239056170">"Po lidhet me <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"Shkëput"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"Imazhi shfaqet kur marrësi i transmetimit është duke luajtur një reklamë"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"Reklama në vazhdim…"</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"Kopertina e albumit"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"Transmetim i drejtpërdrejtë"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"Po ngarkon..."</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"Kapërce"</string>
+<string name="cast_forward" msgid="7884080323096468593">"Përpara"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"Përpara dhjetë sekonda"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"Përpara tridhjetë sekonda"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"Çaktivizo audion"</string>
+<string name="cast_pause" msgid="5308503786390460607">"Ndërprit"</string>
+<string name="cast_play" msgid="5906987965619702702">"Luaj"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"Rikthe"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"Riktheje dhjetë sekonda"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"Riktheje tridhjetë sekonda"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"Kontrolli i kërkimit të luajtjes"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"Kapërce tek artikulli tjetër"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"Kapërce tek artikulli i mëparshëm"</string>
+<string name="cast_stop" msgid="9191388946729723891">"Ndalo"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"Ndalo transmetimin e drejtpërdrejtë"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"Audio"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"Anulo"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"Titrat"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"Kënga <xliff:g id="POSITION">%1$d</xliff:g>"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"Asnjë"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"Në rregull"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"Titrat"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"Aktivizo audion"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-sq/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"Aktivizo"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"<xliff:g id="APP_NAME">%1$s</xliff:g> nuk do të funksionojë nëse nuk aktivizon shërbimet e \"Luaj me Google\"."</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"Aktivizo shërbimet e \"Luaj me Google\""</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"Instalo"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"<xliff:g id="APP_NAME">%1$s</xliff:g> nuk do të funksionojë pa shërbimet e Google Play, të cilat mungojnë në pajisjen tënde."</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"Merr shërbimet e \"Luaj me Google\""</string>
+<string name="common_google_play_services_notification_channel_name" msgid="4293541511340436975">"Disponueshmëria e shërbimeve të Google Play"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"Gabim në shërbimet e \"Luaj me Google\""</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"<xliff:g id="APP_NAME">%1$s</xliff:g> nuk do të funksionojë pa shërbimet e Google Play, të cilat nuk mbështeten nga pajisja jote."</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"Përditëso"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"<xliff:g id="APP_NAME">%1$s</xliff:g> nuk do të funksionojë nëse nuk përditëson shërbimet e \"Luaj me Google\"."</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"Përditëso shërbimet e \"Luaj me Google\""</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"<xliff:g id="APP_NAME">%1$s</xliff:g> nuk do të funksionojë pa shërbimet e \"Luaj me Google\", të cilat po përditësohen aktualisht."</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"Nevojitet një version i ri i shërbimeve të \"Luaj me Google\". Ai do të përditësohet automatikisht së shpejti."</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"Hape në telefon"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"Identifikohu"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"Identifikohu me Google"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-sq/strings.xml -->
+<eat-comment/>
+<string name="s1" msgid="368094699078615544">"Ruaje imazhin"</string>
+<string name="s2" msgid="4550830452390689489">"Të lejohet që reklama të ruajë imazhin në \"Galerinë e fotografive\"?"</string>
+<string name="s3" msgid="2435407834265420668">"Prano"</string>
+<string name="s4" msgid="9167523597401839819">"Refuzo"</string>
+<string name="s5" msgid="1566682516266724847">"Krijo një ngjarje në kalendar"</string>
+<string name="s6" msgid="5996672174517137271">"Të lejohet që reklama të krijojë një ngjarje në kalendar?"</string>
+<string name="s7" msgid="7163549807207034258">"Reklamë test"</string>
 </resources>
