--- a/res/values-sr/values.xml
+++ b/res/values-sr/values.xml
@@ -3,4 +3,79 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-sr/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"<xliff:g id="APP_NAME">%1$s</xliff:g> има проблема са Google Play услугама. Пробајте поново."</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-sr/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"Повезано је са <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"Повезивање са <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_default_channel_name" msgid="2568179715202151240">"Cast"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"Прекини везу"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-sr/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"Оглас"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"Пребацивање на %1$s"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"Опционални титл"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"Опционални титл је недоступан"</string>
+<string name="cast_connecting_to_device" msgid="6769392312239056170">"Повезује се са уређајем <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"Прекини везу"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"Слика која се приказује док Cast пријемник репродукује оглас"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"Приказивање огласа је у току…"</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"Омот албума"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"Стрим уживо"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"Учитава се…"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"Прескочи"</string>
+<string name="cast_forward" msgid="7884080323096468593">"Проследи"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"Премотај десет секунди унапред"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"Премотај тридесет секунди унапред"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"Искључи звук"</string>
+<string name="cast_pause" msgid="5308503786390460607">"Паузирајте"</string>
+<string name="cast_play" msgid="5906987965619702702">"Пусти"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"Тастер за премотавање уназад"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"Премотај десет секунди уназад"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"Премотај тридесет секунди уназад"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"Контрола за тражење при репродукцији"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"Прескочи на следећу ставку"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"Прескочи на претходну ставку"</string>
+<string name="cast_stop" msgid="9191388946729723891">"Тастер за заустављање"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"Заустави стрим уживо"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"Звук"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"Откажи"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"Опционални титл"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"<xliff:g id="POSITION">%1$d</xliff:g>. песма"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"Ништа"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"Потврди"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"Титлови"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"Укључи звук"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-sr/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"Омогући"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"<xliff:g id="APP_NAME">%1$s</xliff:g> неће функционисати ако не омогућите Google Play услуге."</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"Омогућите Google Play услуге"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"Инсталирај"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"<xliff:g id="APP_NAME">%1$s</xliff:g> не може да се покрене без Google Play услуга, које нису инсталиране на уређају."</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"Преузмите Google Play услуге"</string>
+<string name="common_google_play_services_notification_channel_name" msgid="4293541511340436975">"Доступност Google Play услуга"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"Грешка Google Play услуга"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"<xliff:g id="APP_NAME">%1$s</xliff:g> не може да се покрене без Google Play услуга, које уређај не подржава."</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"Ажурирај"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"<xliff:g id="APP_NAME">%1$s</xliff:g> не може да се покрене ако не ажурирате Google Play услуге."</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"Ажурирајте Google Play услуге"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"<xliff:g id="APP_NAME">%1$s</xliff:g> не може да се покрене без Google Play услуга, које се тренутно ажурирају."</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"Потребна је нова верзија Google Play услуга. Ускоро ће се ажурирати."</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"Отвори на телефону"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"Пријави ме"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"Пријави ме на Google"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-sr/strings.xml -->
+<eat-comment/>
+<string name="s1" msgid="368094699078615544">"Чување слике"</string>
+<string name="s2" msgid="4550830452390689489">"Желите ли да дозволите да оглас сачува слику у Галерији слика?"</string>
+<string name="s3" msgid="2435407834265420668">"Прихвати"</string>
+<string name="s4" msgid="9167523597401839819">"Одбиј"</string>
+<string name="s5" msgid="1566682516266724847">"Прављење догађаја у календару"</string>
+<string name="s6" msgid="5996672174517137271">"Желите ли да дозволите да оглас направи догађај у календару?"</string>
+<string name="s7" msgid="7163549807207034258">"Пробни оглас"</string>
 </resources>
