--- a/res/values-ur/values.xml
+++ b/res/values-ur/values.xml
@@ -3,4 +3,79 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-ur/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"‏<xliff:g id="APP_NAME">%1$s</xliff:g> کو Google Play سروسز کے ساتھ مسئلہ پیش آ رہا ہے۔ براہ کرم دوبارہ کوشش کریں۔"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-ur/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"<xliff:g id="NAME">%1$s</xliff:g> سے منسلک ہے"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"<xliff:g id="NAME">%1$s</xliff:g> سے منسلک ہو رہا ہے"</string>
+<string name="cast_notification_default_channel_name" msgid="2568179715202151240">"کاسٹ کریں"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"غیر منسلک کریں"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-ur/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"اشتہار"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"‏%1$s پر کاسٹ ہو رہا ہے"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"سب ٹائٹلز"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"سب ٹائٹلز دستیاب نہیں ہیں"</string>
+<string name="cast_connecting_to_device" msgid="6769392312239056170">"<xliff:g id="NAME">%1$s</xliff:g> سے منسلک ہو رہا ہے"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"غیر منسلک کریں"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"کاسٹ ریسیور کے اشتہار چلانے کے دوران تصویر ڈسپلے کی گئی"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"اشتہار پیشرفت میں ہے…"</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"البم آرٹ"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"لائیو سلسلہ"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"لوڈ ہو رہا ہے…"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"نظر انداز کریں"</string>
+<string name="cast_forward" msgid="7884080323096468593">"فارورڈ کریں"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"دس سیکنڈ فارورڈ کریں"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"تیس سیکنڈ فارورڈ کریں"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"‎ @android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"خاموش کریں"</string>
+<string name="cast_pause" msgid="5308503786390460607">"موقوف کریں"</string>
+<string name="cast_play" msgid="5906987965619702702">"چلائیں"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"ریوائینڈ کریں"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"دس سیکنڈ ریوائنڈ کریں"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"تیس سیکنڈ ریوائنڈ کریں"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"پلے بیک تلاش کرنے کا کنٹرول"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"اگلے آئٹم پر جائیں"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"پچھلے آئٹم پر جائیں"</string>
+<string name="cast_stop" msgid="9191388946729723891">"روکیں"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"لائیو سلسلہ روکیں"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"آڈیو"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"منسوخ کریں"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"سب ٹائٹلز"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"ٹریک <xliff:g id="POSITION">%1$d</xliff:g>"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"کوئی بھی نہیں"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"ٹھیک ہے"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"سب ٹائٹلز"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"آواز چالو کریں"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-ur/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"فعال کریں"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"‏جب تک آپ Google Play سروسز فعال نہیں کر لیتے، <xliff:g id="APP_NAME">%1$s</xliff:g> کام نہیں کرے گی۔"</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"‏Google Play سروسز فعال کریں"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"انسٹال کریں"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"‏<xliff:g id="APP_NAME">%1$s</xliff:g> Google Play سروسز کے بغیر نہیں چلے گی، جو آپ کے آلہ سے غائب ہیں۔"</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"‏Google Play سروسز حاصل کریں"</string>
+<string name="common_google_play_services_notification_channel_name" msgid="4293541511340436975">"‏Google Play سروسز کی دستیابی"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"‏Google Play سروسز کی خرابی"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"‏<xliff:g id="APP_NAME">%1$s</xliff:g> Google Play سروسز کے بغیر نہیں چلے گی، جن کی آپ کا آلہ معاونت نہیں کرتا۔"</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"اپ ڈیٹ کریں"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"‏جب تک آپ Google Play سروسز اپ ڈیٹ نہیں کر لیتے ہیں <xliff:g id="APP_NAME">%1$s</xliff:g> تب تک نہیں چلے گی۔"</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"‏Google Play سروسز اپ ڈیٹ کریں"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"‏<xliff:g id="APP_NAME">%1$s</xliff:g> Google Play سروسز کے بغیر نہیں چلے گی، جو فی الحال اپ ڈیٹ ہو رہی ہیں۔"</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"‏Google Play سروسز کے نئے ورژن کی ضرورت ہے۔ یہ تھوڑی دیر میں خود ہی اپنے آپ کو اپ ڈیٹ کر لے گا۔"</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"فون پر کھولیں"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"سائن ان کریں"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"‏Google کے ساتھ سائن ان کریں"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-ur/strings.xml -->
+<eat-comment/>
+<string name="s1" msgid="368094699078615544">"تصویر محفوظ کریں"</string>
+<string name="s2" msgid="4550830452390689489">"اشتہار کو تصویری گیلری میں تصویر محفوظ کرنے کی اجازت دیں؟"</string>
+<string name="s3" msgid="2435407834265420668">"قبول کریں"</string>
+<string name="s4" msgid="9167523597401839819">"مسترد کریں"</string>
+<string name="s5" msgid="1566682516266724847">"کیلنڈر ایونٹ بنائیں"</string>
+<string name="s6" msgid="5996672174517137271">"اشتہار کو ایک کیلنڈر ایونٹ بنانے کی اجازت دیں؟"</string>
+<string name="s7" msgid="7163549807207034258">"اشتہار ٹیسٹ کریں"</string>
 </resources>
