--- a/res/values-uz/values.xml
+++ b/res/values-uz/values.xml
@@ -3,4 +3,79 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-uz/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"<xliff:g id="APP_NAME">%1$s</xliff:g> ilovasini Google Play xizmatlariga ulab bo‘lmadi. Qaytadan urinib ko‘ring."</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-uz/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"Ulandi: <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"Ulanmoqda: <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_default_channel_name" msgid="2568179715202151240">"Cast"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"Aloqani uzish"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-uz/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"Reklama"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"“%1$s” qurilmasiga translatsiya qilinmoqda"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"Taglavhalar"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"Taglavhalar yo‘q"</string>
+<string name="cast_connecting_to_device" msgid="6769392312239056170">"Ulanmoqda: <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"Aloqani uzish"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"Google Cast resiveri reklamani ijro etayotganda rasm ko‘rsatildi"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"Reklama davom etmoqda…"</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"Albom muqovasi"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"Jonli efir"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"Yuklanmoqda…"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"Tashlab ketish"</string>
+<string name="cast_forward" msgid="7884080323096468593">"Oldinga o‘tkazish"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"O‘n soniya oldinga o‘tkazish"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"O‘ttiz soniya oldinga o‘tkazish"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"Ovozsiz qilish"</string>
+<string name="cast_pause" msgid="5308503786390460607">"Pauza"</string>
+<string name="cast_play" msgid="5906987965619702702">"Ijro"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"Orqaga qaytarish"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"O‘n soniya orqaga qaytarish"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"O‘ttiz soniya orqaga qaytarish"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"Ijro qidiruv paneli"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"Keyingi obyektga o‘tish"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"Avvalgi obyektga o‘tish"</string>
+<string name="cast_stop" msgid="9191388946729723891">"To‘xtatish"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"Translatsiyani to‘xtatish"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"Audio"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"Bekor qilish"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"Taglavhalar"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"Trek <xliff:g id="POSITION">%1$d</xliff:g>"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"Yo‘q"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"OK"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"Taglavhalar"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"Ovozni yoqish"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-uz/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"Yoqish"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"Google Play xizmatlari yoqilmaguncha, <xliff:g id="APP_NAME">%1$s</xliff:g> ishlamaydi."</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"Google Play xizmatlarini yoqish"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"O‘rnatish"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"<xliff:g id="APP_NAME">%1$s</xliff:g> ishlashi uchun qurilmangizda Google Play xizmatlarini o‘rnatish lozim."</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"Google Play xizmatlarini o‘rnatish"</string>
+<string name="common_google_play_services_notification_channel_name" msgid="4293541511340436975">"Google Play xizmatlarining mavjudligi"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"Google Play xizmatlari xatosi"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"<xliff:g id="APP_NAME">%1$s</xliff:g> ilovasi Google Play xizmatlarisiz ishlamaydi, biroq qurilmangiz ularni qo‘llab-quvvatlamaydi."</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"Yangilash"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"Google Play xizmatlari yangilanmaguncha, <xliff:g id="APP_NAME">%1$s</xliff:g> ishga tushmaydi."</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"Google Play xizmatlarini yangilash"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"<xliff:g id="APP_NAME">%1$s</xliff:g> ilovasining ishlashi uchun zarur Google Play xizmatlari hozirda yangilanmoqda."</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"Google Play xizmatlarining yangi versiyasi zarur. U o‘zini qisqa vaqt ichida yangilaydi."</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"Telefonda ochish"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"Kirish"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"Google orqali kirish"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-uz/strings.xml -->
+<eat-comment/>
+<string name="s1" msgid="368094699078615544">"Rasmni saqlash"</string>
+<string name="s2" msgid="4550830452390689489">"Reklamaga rasmni gallereyaga saqlashga ruxsat berilsinmi?"</string>
+<string name="s3" msgid="2435407834265420668">"Qabul qilish"</string>
+<string name="s4" msgid="9167523597401839819">"Rad etish"</string>
+<string name="s5" msgid="1566682516266724847">"Taqvimda tadbir yaratish"</string>
+<string name="s6" msgid="5996672174517137271">"Reklamaga taqvimda tadbir yaratishga ruxsat berilsinmi?"</string>
+<string name="s7" msgid="7163549807207034258">"Test reklama"</string>
 </resources>
