--- a/res/values-vi/values.xml
+++ b/res/values-vi/values.xml
@@ -3,4 +3,79 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-vi/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"<xliff:g id="APP_NAME">%1$s</xliff:g> đang gặp sự cố với các dịch vụ của Google Play. Hãy thử lại."</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-vi/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"Đã kết nối với <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"Đang kết nối với <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_default_channel_name" msgid="2568179715202151240">"Cast"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"Ngắt kết nối"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-vi/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"Quảng cáo"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"Đang truyền tới %1$s"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"Phụ đề chi tiết"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"Không có sẵn phụ đề chi tiết"</string>
+<string name="cast_connecting_to_device" msgid="6769392312239056170">"Đang kết nối với <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"Ngắt kết nối"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"Hình ảnh sẽ được hiển thị khi bộ thu truyền đang phát quảng cáo"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"Đang trong tiến trình quảng cáo…"</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"Ảnh bìa album"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"Phát trực tuyến"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"Đang tải…"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"Bỏ qua"</string>
+<string name="cast_forward" msgid="7884080323096468593">"Tua đi"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"Tua đi 10 giây"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"Tua đi 30 giây"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"Tắt tiếng"</string>
+<string name="cast_pause" msgid="5308503786390460607">"Tạm dừng"</string>
+<string name="cast_play" msgid="5906987965619702702">"Phát"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"Tua lại"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"Tua lại 10 giây"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"Tua lại 30 giây"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"Kiểm soát tìm kiếm phát lại"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"Chuyển đến mục tiếp theo"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"Chuyển đến mục trước"</string>
+<string name="cast_stop" msgid="9191388946729723891">"Dừng"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"Dừng luồng trực tiếp"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"Âm thanh"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"Hủy"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"Phụ đề chi tiết"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"Bản nhạc <xliff:g id="POSITION">%1$d</xliff:g>"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"Không có gì"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"OK"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"Phụ đề"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"Bật tiếng"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-vi/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"Bật"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"<xliff:g id="APP_NAME">%1$s</xliff:g> sẽ không hoạt động nếu bạn không bật dịch vụ của Google Play."</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"Bật dịch vụ của Google Play"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"Cài đặt"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"<xliff:g id="APP_NAME">%1$s</xliff:g> sẽ không chạy nếu không có dịch vụ của Google Play. Thiết bị của bạn bị thiếu dịch vụ này."</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"Cài đặt dịch vụ của Google Play"</string>
+<string name="common_google_play_services_notification_channel_name" msgid="4293541511340436975">"Phạm vi cung cấp các dịch vụ của Google Play"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"Lỗi dịch vụ của Google Play"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"<xliff:g id="APP_NAME">%1$s</xliff:g> sẽ không chạy nếu không có các dịch vụ của Google Play. Thiết bị của bạn không hỗ trợ các dịch vụ này."</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"Cập nhật"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"<xliff:g id="APP_NAME">%1$s</xliff:g> sẽ không chạy trừ khi bạn cập nhật Dịch vụ của Google Play."</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"Cập nhật dịch vụ của Google Play"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"<xliff:g id="APP_NAME">%1$s</xliff:g> sẽ không chạy nếu không có dịch vụ của Google Play. Dịch vụ này hiện đang cập nhật."</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"Cần phiên bản mới của dịch vụ Google Play. Dịch vụ sẽ sớm tự động cập nhật."</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"Mở trên điện thoại"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"Đăng nhập"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"Đăng nhập bằng Google"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-vi/strings.xml -->
+<eat-comment/>
+<string name="s1" msgid="368094699078615544">"Lưu hình ảnh"</string>
+<string name="s2" msgid="4550830452390689489">"Cho phép Quảng cáo lưu trữ hình ảnh trong thư viện Ảnh?"</string>
+<string name="s3" msgid="2435407834265420668">"Chấp nhận"</string>
+<string name="s4" msgid="9167523597401839819">"Từ chối"</string>
+<string name="s5" msgid="1566682516266724847">"Tạo sự kiện lịch"</string>
+<string name="s6" msgid="5996672174517137271">"Cho phép Quảng cáo tạo sự kiện lịch?"</string>
+<string name="s7" msgid="7163549807207034258">"Quảng cáo thử nghiệm"</string>
 </resources>
