--- a/res/values-zh-rHK/values.xml
+++ b/res/values-zh-rHK/values.xml
@@ -3,4 +3,79 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-zh-rHK/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取 Google Play 服務時發生問題。請稍後再試一次。"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-zh-rHK/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"已連接至「<xliff:g id="NAME">%1$s</xliff:g>」"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"正在連接至「<xliff:g id="NAME">%1$s</xliff:g>」"</string>
+<string name="cast_notification_default_channel_name" msgid="2568179715202151240">"Cast"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"解除連接"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-zh-rHK/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"廣告"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"正投放至「%1$s」"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"隱藏式字幕"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"未能提供隱藏式字幕"</string>
+<string name="cast_connecting_to_device" msgid="6769392312239056170">"正在連線至「<xliff:g id="NAME">%1$s</xliff:g>」"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"中斷連線"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"投放接收器播放廣告時顯示的圖片"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"正在投放廣告…"</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"專輯封面"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"即時串流"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"正在載入…"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"略過"</string>
+<string name="cast_forward" msgid="7884080323096468593">"前轉"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"前轉 10 秒"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"前轉 30 秒"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"靜音"</string>
+<string name="cast_pause" msgid="5308503786390460607">"暫停"</string>
+<string name="cast_play" msgid="5906987965619702702">"播放"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"倒帶"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"倒帶 10 秒"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"倒帶 30 秒"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"播放控制介面"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"跳到下一個項目"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"跳到上一個項目"</string>
+<string name="cast_stop" msgid="9191388946729723891">"停止"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"停止即時串流"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"音訊"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"取消"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"隱藏式字幕"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"歌曲 <xliff:g id="POSITION">%1$d</xliff:g>"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"沒有"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"確定"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"字幕"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"取消靜音"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-zh-rHK/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"啟用"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"您必須啟用 Google Play 服務，方可執行「<xliff:g id="APP_NAME">%1$s</xliff:g>」。"</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"啟用 Google Play 服務"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"安裝"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"您的裝置尚未安裝 Google Play 服務，因此無法執行「<xliff:g id="APP_NAME">%1$s</xliff:g>」。"</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"安裝 Google Play 服務"</string>
+<string name="common_google_play_services_notification_channel_name" msgid="4293541511340436975">"Google Play 服務的適用範圍"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"Google Play 服務錯誤"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"您的裝置不支援 Google Play 服務，因此無法執行「<xliff:g id="APP_NAME">%1$s</xliff:g>」。"</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"更新"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"您必須更新「Google Play 服務」，才能執行 <xliff:g id="APP_NAME">%1$s</xliff:g>。"</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"更新 Google Play 服務"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"正在更新 Google Play 服務，更新完成後方可執行「<xliff:g id="APP_NAME">%1$s</xliff:g>」。"</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"需要使用新版本的 Google Play 服務。更新會即將自動開始。"</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"在手機開啟"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"登入"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"透過 Google 登入"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-zh-rHK/strings.xml -->
+<eat-comment/>
+<string name="s1" msgid="368094699078615544">"儲存圖片"</string>
+<string name="s2" msgid="4550830452390689489">"允許廣告將圖片儲存至相片集嗎？"</string>
+<string name="s3" msgid="2435407834265420668">"接受"</string>
+<string name="s4" msgid="9167523597401839819">"拒絕"</string>
+<string name="s5" msgid="1566682516266724847">"建立日曆活動"</string>
+<string name="s6" msgid="5996672174517137271">"允許廣告建立日曆活動嗎？"</string>
+<string name="s7" msgid="7163549807207034258">"測試廣告"</string>
 </resources>
