--- a/res/values/values.xml
+++ b/res/values/values.xml
@@ -6,4 +6,328 @@
 <!-- java/com/google/android/gmscore/integ/client/common/res/values/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue"><xliff:g id="app_name">%1$s</xliff:g> is having trouble with Google Play services. Please try again.</string>
+<!-- java/com/google/android/gmscore/integ/client/cast/res/values/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message">Connected to <xliff:g id="name">%1$s</xliff:g></string>
+
+<string name="cast_notification_connecting_message">Connecting to <xliff:g id="name">%1$s</xliff:g></string>
+
+<string name="cast_notification_default_channel_name">Cast</string>
+
+<string name="cast_notification_disconnect">Disconnect</string>
+
+<!-- java/com/google/android/gmscore/integ/client/maps/res/values/maps_attrs.xml -->
+<eat-comment/>
+<declare-styleable name="MapAttrs"><attr name="mapType">
+<enum name="none" value="0"/>
+
+<enum name="normal" value="1"/>
+
+<enum name="satellite" value="2"/>
+
+<enum name="terrain" value="3"/>
+
+<enum name="hybrid" value="4"/>
+
+</attr>
+
+<attr name="cameraBearing" format="float"/>
+
+<attr name="cameraTargetLat" format="float"/>
+
+<attr name="cameraTargetLng" format="float"/>
+
+<attr name="cameraTilt" format="float"/>
+
+<attr name="cameraZoom" format="float"/>
+
+<attr name="liteMode" format="boolean"/>
+
+<attr name="uiCompass" format="boolean"/>
+
+<attr name="uiRotateGestures" format="boolean"/>
+
+<attr name="uiScrollGestures" format="boolean"/>
+
+<attr name="uiTiltGestures" format="boolean"/>
+
+<attr name="uiZoomControls" format="boolean"/>
+
+<attr name="uiZoomGestures" format="boolean"/>
+
+<attr name="useViewLifecycle" format="boolean"/>
+
+<attr name="zOrderOnTop" format="boolean"/>
+
+<attr name="uiMapToolbar" format="boolean"/>
+
+<attr name="ambientEnabled" format="boolean"/>
+
+<attr name="cameraMinZoomPreference" format="float"/>
+
+<attr name="cameraMaxZoomPreference" format="float"/>
+
+<attr name="latLngBoundsSouthWestLatitude" format="float"/>
+
+<attr name="latLngBoundsSouthWestLongitude" format="float"/>
+
+<attr name="latLngBoundsNorthEastLatitude" format="float"/>
+
+<attr name="latLngBoundsNorthEastLongitude" format="float"/>
+</declare-styleable>
+<!-- java/com/google/android/gmscore/integ/client/cast/framework/res/values/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label">Ad</string>
+
+<string name="cast_casting_to_device">Casting to %1$s</string>
+
+<string name="cast_closed_captions">Closed captions</string>
+
+<string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
+
+<string name="cast_connecting_to_device">Connecting to <xliff:g id="name">%1$s</xliff:g></string>
+
+<string name="cast_disconnect">Disconnect</string>
+
+<string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad"</string>
+
+<string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
+
+<string name="cast_expanded_controller_background_image">Album art</string>
+
+<string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
+
+<string name="cast_expanded_controller_loading">Loading…</string>
+
+<string name="cast_expanded_controller_skip_ad_label">Skip</string>
+
+<string name="cast_forward">Forward</string>
+
+<string name="cast_forward_10">Forward ten seconds</string>
+
+<string name="cast_forward_30">Forward thirty seconds</string>
+
+<string name="cast_intro_overlay_button_text">@android:string/ok</string>
+
+<string name="cast_invalid_stream_duration_text" translatable="false">--:--</string>
+
+<string name="cast_invalid_stream_position_text" translatable="false">--:--</string>
+
+<string name="cast_mute">Mute</string>
+
+<string name="cast_pause">Pause</string>
+
+<string name="cast_play">Play</string>
+
+<string name="cast_rewind">Rewind</string>
+
+<string name="cast_rewind_10">Rewind ten seconds</string>
+
+<string name="cast_rewind_30">Rewind thirty seconds</string>
+
+<string name="cast_seek_bar">Playback seek control</string>
+
+<string name="cast_skip_next">Skip to next item</string>
+
+<string name="cast_skip_prev">Skip to previous item</string>
+
+<string name="cast_stop">Stop</string>
+
+<string name="cast_stop_live_stream">Stop live stream</string>
+
+<string name="cast_tracks_chooser_dialog_audio">Audio</string>
+
+<string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
+
+<string name="cast_tracks_chooser_dialog_closed_captions">Closed Captions</string>
+
+<string name="cast_tracks_chooser_dialog_default_track_name">Track <xliff:g id="position" example="2">%1$d</xliff:g></string>
+
+<string name="cast_tracks_chooser_dialog_none">None</string>
+
+<string name="cast_tracks_chooser_dialog_ok">OK</string>
+
+<string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
+
+<string name="cast_unmute">Unmute</string>
+<!-- java/com/google/android/gmscore/integ/client/cast/framework/res/values/cast_attrs.xml -->
+<eat-comment/>
+<declare-styleable name="CastExpandedController">
+<attr name="castButtonColor"/>
+
+<attr name="castControlButtons"/>
+
+<attr name="castSeekBarProgressDrawable" format="reference"/>
+
+<attr name="castSeekBarThumbDrawable" format="reference"/>
+
+<attr name="castPlayButtonDrawable"/>
+
+<attr name="castPauseButtonDrawable"/>
+
+<attr name="castStopButtonDrawable"/>
+
+<attr name="castSkipPreviousButtonDrawable"/>
+
+<attr name="castSkipNextButtonDrawable"/>
+
+<attr name="castRewind30ButtonDrawable"/>
+
+<attr name="castForward30ButtonDrawable"/>
+
+<attr name="castMuteToggleButtonDrawable"/>
+
+<attr name="castClosedCaptionsButtonDrawable"/>
+</declare-styleable>
+
+<declare-styleable name="CastIntroOverlay">
+<attr name="castBackgroundColor" format="color|reference"/>
+
+<attr name="castButtonBackgroundColor" format="color|reference"/>
+
+<attr name="castButtonTextAppearance" format="reference"/>
+
+<attr name="castButtonText" format="reference|string"/>
+
+<attr name="castTitleTextAppearance" format="reference"/>
+
+<attr name="castFocusRadius" format="dimension|reference"/>
+</declare-styleable>
+
+<declare-styleable name="CastMiniController">
+<attr name="castShowImageThumbnail" format="boolean"/>
+
+<attr name="castTitleTextAppearance"/>
+
+<attr name="castSubtitleTextAppearance" format="reference"/>
+
+<attr name="castControlButtons" format="reference"/>
+
+<attr name="castBackground" format="color|reference"/>
+
+<attr name="castProgressBarColor" format="color"/>
+
+<attr name="castButtonColor" format="color|reference"/>
+
+<attr name="castPlayButtonDrawable" format="reference"/>
+
+<attr name="castPauseButtonDrawable" format="reference"/>
+
+<attr name="castStopButtonDrawable" format="reference"/>
+
+<attr name="castLargePlayButtonDrawable" format="reference"/>
+
+<attr name="castLargePauseButtonDrawable" format="reference"/>
+
+<attr name="castLargeStopButtonDrawable" format="reference"/>
+
+<attr name="castSkipPreviousButtonDrawable" format="reference"/>
+
+<attr name="castSkipNextButtonDrawable" format="reference"/>
+
+<attr name="castRewind30ButtonDrawable" format="reference"/>
+
+<attr name="castForward30ButtonDrawable" format="reference"/>
+
+<attr name="castMuteToggleButtonDrawable" format="reference"/>
+
+<attr name="castClosedCaptionsButtonDrawable" format="reference"/>
+</declare-styleable>
+
+<declare-styleable name="CustomCastTheme">
+<attr name="castIntroOverlayStyle" format="reference"/>
+
+<attr name="castMiniControllerStyle" format="reference"/>
+
+<attr name="castExpandedControllerStyle" format="reference"/>
+</declare-styleable>
+<!-- java/com/google/android/gmscore/integ/client/admob/res/values/ads_attrs.xml -->
+<eat-comment/>
+<declare-styleable name="AdsAttrs">
+<attr name="adSize" format="string"/>
+
+<attr name="adSizes" format="string"/>
+
+<attr name="adUnitId" format="string"/>
+</declare-styleable>
+<!-- java/com/google/android/gmscore/integ/client/base/res/values/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="2523291102206661146">Enable</string>
+
+<string name="common_google_play_services_enable_text" msgid="227660514972886228"><xliff:g id="app_name">%1$s</xliff:g> won\'t work unless you enable Google Play services.</string>
+
+<string name="common_google_play_services_enable_title" msgid="5122002158466380389">Enable Google Play services</string>
+
+<string name="common_google_play_services_install_button" msgid="7153882981874058840">Install</string>
+
+<string name="common_google_play_services_install_text"><xliff:g id="app_name">%1$s</xliff:g> won\'t run without Google Play services, which are missing from your device.</string>
+
+<string name="common_google_play_services_install_title" msgid="7215213145546190223">Get Google Play services</string>
+
+<string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
+
+<string name="common_google_play_services_notification_ticker">Google Play services error</string>
+
+<string name="common_google_play_services_unsupported_text"><xliff:g id="app_name">%1$s</xliff:g> won\'t run without Google Play services, which are not supported by your device.</string>
+
+<string name="common_google_play_services_update_button" msgid="6556509956452265614">Update</string>
+
+<string name="common_google_play_services_update_text" msgid="9053896323427875356"><xliff:g id="app_name">%1$s</xliff:g> won\'t run unless you update Google Play services.</string>
+
+<string name="common_google_play_services_update_title" msgid="6006316683626838685">Update Google Play services</string>
+
+<string name="common_google_play_services_updating_text"><xliff:g id="app_name">%1$s</xliff:g> won\'t run without Google Play services, which are currently updating.</string>
+
+<string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
+
+<string name="common_open_on_phone">Open on phone</string>
+
+<string name="common_signin_button_text">Sign in</string>
+
+<string name="common_signin_button_text_long">Sign in with Google</string>
+<!-- java/com/google/android/gmscore/integ/client/base/res/values/attrs.xml -->
+<eat-comment/>
+<declare-styleable name="LoadingImageView"><attr name="imageAspectRatioAdjust">
+<enum name="none" value="0"/>
+
+<enum name="adjust_width" value="1"/>
+
+<enum name="adjust_height" value="2"/>
+
+</attr>
+
+<attr name="imageAspectRatio" format="float"/>
+
+<attr name="circleCrop" format="boolean"/>
+</declare-styleable>
+
+<declare-styleable name="SignInButton"><attr name="buttonSize" format="reference">
+<enum name="standard" value="0"/>
+
+<enum name="wide" value="1"/>
+
+<enum name="icon_only" value="2"/>
+
+</attr>
+<attr name="colorScheme" format="reference">
+<enum name="dark" value="0"/>
+
+<enum name="light" value="1"/>
+
+<enum name="auto" value="2"/>
+
+</attr>
+
+<attr name="scopeUris" format="reference|string"/>
+</declare-styleable>
+
+<!-- java/com/google/android/gmscore/integ/client/admob-impl/res/values/strings.xml -->
+<eat-comment/>
+<string name="s1">Save image</string>
+<string name="s2">"Allow Ad to store image in Picture gallery?"</string>
+<string name="s3">Accept</string>
+<string name="s4">Decline</string>
+<string name="s5">Create calendar event</string>
+<string name="s6">Allow Ad to create a calendar event?</string>
+<string name="s7">Test Ad</string>
 </resources>
